# GEO

./: .gitattributes  .gitignore  Makefile  README.md  pyproject.toml
docs/: README.md  TRIAGE.md  cli.md  triage.csv
environment/: environment.yml
examples/: accessions.txt
examples/reports/: GSE2034_triage.json  GSE2034_triage.md  GSE60450_triage.json  GSE60450_triage.md  GSE78220_triage.json  GSE78220_triage.md  summary.csv  summary.md
examples/reports/GSE157830/: GSE157830_triage.json  GSE157830_triage.md
geo_portfolio/: __init__.py  cli.py  data.py  fetch.py  parse.py  report.py  runner.py  scaffold.py  suitability.py
projects/GSE157830/: README.md  SUITABILITY.md  analysis.html  analysis.qmd
projects/GSE157830/data/: GSE157830_metadata_clean.csv  GSE157830_sample_metadata.csv
projects/GSE157830/notes/: suitability.md
projects/GSE2034/: SUITABILITY.md
projects/GSE334534/: README.md  SUITABILITY.md  analysis.html  analysis.qmd
projects/GSE334534/data/: GSE334534_metadata_clean.csv
projects/GSE334534/notes/: GSE334534_triage.json
projects/GSE60450/: README.md  SUITABILITY.md  analysis.html  analysis.qmd
projects/GSE78220/: README.md  SUITABILITY.md  analysis.html  analysis.qmd
projects/GSE78220/scripts/: prep_counts.R  (+1 more)
scripts/: build_triage.R  geo_helpers.R  new_project.R
templates/project_template/: README.md  SUITABILITY.md  analysis.qmd
tests/: conftest.py  test_cli.py  test_data.py  test_live.py  test_parse.py  test_report.py  test_suitability.py  test_validation.py
tests/fixtures/: GSE157830.soft  GSE2034.soft  GSE78220.soft
(+14 files in other folders)
