[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geo-portfolio"
version = "0.1.0"
description = "CLI for the GEO RNA-seq reanalysis portfolio: triage GEO accessions, generate suitability reports, scaffold projects, and run the existing R/Quarto workflow."
readme = "docs/cli.md"
requires-python = ">=3.9"
authors = [{ name = "jam-sudo" }]
license = { text = "MIT" }
dependencies = [
  "typer>=0.12",
  "rich>=13.0",
  "requests>=2.28",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.scripts]
geo = "geo_portfolio.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["geo_portfolio"]

[tool.pytest.ini_options]
markers = [
  "live: tests that hit the live NCBI GEO service (deselect with -m 'not live')",
]
